General buildscript maintenance
Update Gradle and Kotlin

Get rid of SpongeGradle, it is incompatible with recent Gradle versions

Fix a deprecation warning in future Java versions